--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,43 @@
 main {
     min-height: calc(100vh - 160px);
   }
+
+  #contenedor {
+    display: flex;
+    flex-wrap: wrap; 
+}
+
+.card {
+  margin: 0 20px 40px 0 ;
+  padding: 0;
+  height: 300px;
+    width: 300px;
+    text-align: center;
+    overflow: hidden; 
+}
+
+.card-body {
+  height: 100%;
+    display: flex;
+    flex-direction: column; 
+}
+
+.card-img-top {
+    width: 100%;
+    height: 200px; 
+    object-fit: cover; 
+    padding: 0;
+}
+
+
+.titleDiv{
+  margin-top: 15px;
+  height: 85px;
+}
+
+.date{
+  color: gray;
+  text-align: left;
+  margin-top: 20px;
+  margin-bottom: -10px;
+}
